--- a/app/views/organizations/index.html.erb
+++ b/app/views/organizations/index.html.erb
@@ -2,4 +2,8 @@
 
 Logged in as <%= @user.name %>
 
-<%= link_to "Log Out", logout_path, method: "delete" %> 
+<%= link_to "Log Out", logout_path, method: "delete" %> <br>
+
+<h2> <%= @organization.name %> </h2> 
+
+<%= link_to "Leave", '/home/leave', method: "get" %> <br>
