--- a/app/views/organizations/index.html.erb
+++ b/app/views/organizations/index.html.erb
@@ -4,6 +4,8 @@ Logged in as <%= @user.name %>
 
 <%= link_to "Log Out", logout_path, method: "delete" %> <br>
 
-<h2> <%= @organization.name %> </h2> 
+<b> <h2> <%= @organization.name %> </h2> </b>
 
+<%= link_to "Shifts", new_organization_shift_path(@organization), method: "get" %> 
+<%= link_to "Edit", edit_organization_path(@organizations, id: @organization.id), method: "get" %> 
 <%= link_to "Leave", '/home/leave', method: "get" %> <br>
