--- a/app/views/organizations/new.html.erb
+++ b/app/views/organizations/new.html.erb
@@ -4,7 +4,7 @@ Logged in as <%= @user.name %>
 
 <%= link_to "Log Out", logout_path, method: "delete" %> <br>
 
-You aren't a member of any organisations.
+You aren't a member of any organisations. <br>
 
 Join an existing one or create a new one. 
 
