null field handling

--- a/app/views/shifts/index.html.erb
+++ b/app/views/shifts/index.html.erb
@@ -4,7 +4,7 @@ Logged in as <%= @user.name %>
 
 <%= link_to "Log Out", logout_path, method: "delete" %> <br>
 
-<b> <h2> <%= @organization.name %> </h2> </b> <%= link_to "Back", '/home', method: "get" %> <br>
+<b> <h2> <%= @organization.name %> </h2> </b> <%= link_to "Back", '/home', method: "get" %> <br><br><br>
 
 <b> Shifts </b> <br> <br>
 
