--- a/app/views/organizations/new.html.erb
+++ b/app/views/organizations/new.html.erb
@@ -2,7 +2,7 @@
 
 Logged in as <%= @user.name %>
 
-<%= link_to "Log Out", logout_path, method: "delete" %> <br>
+<%= link_to "Log Out", logout_path, method: "delete" %> <br><br><br>
 
 You aren't a member of any organisations. <br>
 
