--- a/app/views/organizations/edit.html.erb
+++ b/app/views/organizations/edit.html.erb
@@ -2,7 +2,8 @@
 
 Logged in as <%= @user.name %>
 
-<%= link_to "Log Out", logout_path, method: "delete" %> <br>
+<%= link_to "Log Out", logout_path, method: "delete" %>  | 
+<%= link_to "Settings", home_settings_path, method: "get" %> <br>
 
 <h2>Edit Organisation</h2>
 
@@ -28,3 +29,7 @@ Logged in as <%= @user.name %>
   <%= link_to "Delete", @organization, data: {
     turbo_method: :delete,
   } %> <br>
+
+  <p> 
+<%= link_to "Back to Home", go_home_path %> 
+</p> <br>
