--- a/app/views/organizations/index.html.erb
+++ b/app/views/organizations/index.html.erb
@@ -2,7 +2,8 @@
 
 Logged in as <%= @user.name %> 
 
-<%= link_to "Log Out", logout_path, method: "delete" %> <br>
+<%= link_to "Log Out", logout_path, method: "delete" %>  | 
+<%= link_to "Settings", home_settings_path, method: "get" %> <br>
 
 <b> <h2> <%= @organization.name %> </h2> </b>
 
