--- a/app/views/organizations/new.html.erb
+++ b/app/views/organizations/new.html.erb
@@ -2,7 +2,8 @@
 
 Logged in as <%= @user.name %>
 
-<%= link_to "Log Out", logout_path, method: "delete" %> <br><br><br>
+<%= link_to "Log Out", logout_path, method: "delete" %>  | 
+<%= link_to "Settings", home_settings_path, method: "get" %> <br>
 
 You aren't a member of any organisations. <br>
 
