--- a/app/views/shifts/index.html.erb
+++ b/app/views/shifts/index.html.erb
@@ -43,7 +43,12 @@ Logged in as <%= @user.name %>
   <td>
     $ <%= @hours_worked * @organization.rate %>
   </td>
+  <td>
+  <%= link_to "Edit", edit_user_shift_path(@user, id: shift.id), method: "get" %> </td> 
+  <td> 
+<%= link_to "Delete", user_shift_path(@user, id: shift.id), method: "delete" %> </td>
 </tr>
+
 <% end %>
 
 
