--- a/app/views/shifts/emp_filter.html.erb
+++ b/app/views/shifts/emp_filter.html.erb
@@ -1,6 +1,6 @@
 <h1>Adnat</h1>
 
-Logged in as <%= @user.name %>
+Logged in as <%= current_user.name %>
 
 <%= link_to "Log Out", logout_path, method: "delete" %>  | 
 <%= link_to "Settings", home_settings_path, method: "get" %> <br>
